<resources>
    <string name="app_name">ProyekMC</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_account">Account</string>
    <string name="url">http://192.168.1.6/myservice/master.php</string>


</resources>