<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_activity"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account"
        app:showAsAction="always" />

</menu>