<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.proyekmc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.proyekmc.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />
    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.proyekmc.ui.favourite.FavouriteFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.proyekmc.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.proyekmc.ui.account.AccountFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_account" />
</navigation>